gateways/contour-gateway-class.yaml
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: contour-gatewayclass
spec:
  controller: projectcontour.io/contour-operator
  parametersRef:
    group: operator.projectcontour.io
    kind: Contour
    scope: Namespace
    name: contour-gateway-bets
    namespace: contour-operator
